migrate to entities